--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,3 +12,4 @@ services:
           - ./config/nginx/nginx.conf:/etc/nginx/nginx.conf:ro
           - ./config/nginx/sites-enabled:/etc/nginx/conf.d:ro
           - ./www/punq/index.html:/var/www/html/punq/index.html:ro
+          - ./www/punq/favicon.ico:/var/www/html/punq/favicon.ico:ro
