fixed nginx configuration

--- a/config/nginx/nginx.conf
+++ b/config/nginx/nginx.conf
@@ -1,4 +1,3 @@
-
 user  nginx;
 worker_processes  1;
 
@@ -21,41 +20,35 @@ http {
 
     access_log  /var/log/nginx/access.log  main;
 
+    keepalive_timeout  65;
     sendfile        on;
     #tcp_nopush     on;
 
-    keepalive_timeout  65;
 
-    #gzip  on;
+    gzip  on;
+    gzip_comp_level 5;
+    gzip_min_length 200;
+    gzip_proxied    any;
+    gzip_types  application/json application/javascript;
 
     include /etc/nginx/conf.d/*.conf;
-    server {
-	listen 9009;
-	root /var/www/html/punq;
- 	location / {
-	}	
-    }
-    server {
-	listen 80;
-	server_name *.axentra.com *.mystora.com *.hipserv.com;
-    	location / {
-		proxy_set_header Host $host;
-		proxy_set_header X-Real-IP $remote_addr;
-    		proxy_pass http://192.168.1.198:80; 
-    	}
-    }
-    server {
-	listen 80;
-	server_name *.punq.io punq.io;
-	root /var/www/html/punq;
-    }
-    server {
-    listen 80;
-    server_name docker.n4l.io;
-    location / {
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_pass http://localhost:5000;
-        }
-    }
+    include /etc/nginx/sites-enabled/*.conf;
+    
+    #server {
+    	#listen 9009;
+    	#root /var/www/html/punq;
+    	#location / {
+    	#}	
+    #}
+   
+    #server {
+        #listen 80;
+        #server_name docker.n4l.io;
+        #location / {
+            #proxy_set_header Host $host;
+            #proxy_set_header X-Real-IP $remote_addr;
+            #proxy_pass http://localhost:5000;
+        #}
+    #}
+
 }
