--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,8 @@ services:
           - "443:443"
           - "9009:9009"
         volumes:
+          - /etc/letsencrypt:/etc/letsencrypt
           - ./config/nginx/nginx.conf:/etc/nginx/nginx.conf:ro
-          - ./config/nginx/sites-enabled:/etc/nginx/conf.d:ro
+          - ./config/nginx/sites-enabled:/etc/nginx/sites-enabled:ro
           - ./www/punq/index.html:/var/www/html/punq/index.html:ro
           - ./www/punq/favicon.ico:/var/www/html/punq/favicon.ico:ro
